# ChangeLog for games-fps/xonotic-data
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  06 Jul 2011; Nikoli <nikoli@lavabit.com> xonotic-data-9999.ebuild:
  fix store dir

  05 Jul 2011; Nikoli <nikoli@lavabit.com> xonotic-data-9999.ebuild:
  migrate to git-2

  27 Mar 2011; Nikoli <nikoli@lavabit.com> xonotic-data-9999.ebuild,
  metadata.xml:
  use cached-converter.sh, do not run 7za as root

  02 Feb 2011; Nikoli <nikoli@lavabit.com> xonotic-data-9999.ebuild:
  move maps to xonotic-maps package

*xonotic-data-9999 (17 Jan 2011)

  17 Jan 2011; Nikoli <nikoli@lavabit.com> +xonotic-data-9999.ebuild,
  +metadata.xml:
  initial ebuild
