@@ -1,6 +1,10 @@
 # ChangeLog for games-fps/xonotic-data
-# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
+# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
+
+  06 Mar 2013; Azamat H. Hackimov <azamat.hackimov@gmail.com>
+  xonotic-data-9999.ebuild:
+  [games-fps/xonotic-data] Refresh ebuild, fix QA warnings for req-check.
 
   06 Jul 2011; Nikoli <nikoli@lavabit.com> xonotic-data-9999.ebuild:
   fix store dir
@@ -20,4 +24,3 @@
   17 Jan 2011; Nikoli <nikoli@lavabit.com> +xonotic-data-9999.ebuild,
   +metadata.xml:
   initial ebuild
-
